namespace/media/flaresolverr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      runtimeClassName: gvisor
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.64.0.1
        options:
          - name: ndots
            value: "1"
      automountServiceAccountToken: false
      containers:
        - name: flaresolverr
          image: docker.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
