namespace/media/flaresolverr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flaresolverr.oglesby.io`)
      kind: Rule
      services:
        - name: flaresolverr
          port: 8191
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`flaresolverr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: flaresolverr
          port: 8191
